# ChangeLog for dev-perl/Digest-SHA-PurePerl
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Sep 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +Digest-SHA-PurePerl-5.48.ebuild, +metadata.xml:
  initial commit
