@@ -1,4 +1,4 @@
 DIST Digest-SHA-PurePerl-5.48.tar.gz 31414 RMD160 ac2a2af6290ad7ee4014f64b84e72eb77323b274 SHA1 a878b502eaff16ae994e50ebdf648610baebd760 SHA256 67aa7e8cdf2c73951834bf5675ef0ae0a1d9a50e4d227098b0faed3e9ae74fff
-EBUILD Digest-SHA-PurePerl-5.48.ebuild 320 RMD160 95e18f34efc97ce4d012ec4888f63e253bccde7c SHA1 0d28c9684345951fac2a1be9c66d63fc4793d80e SHA256 4d8e4024ffbaaf2051f4ea2da2147423c01f824f725e5a11a5a15aa404a21d6c
-MISC ChangeLog 251 RMD160 ad806c6c957cae4e0363f61e5235dbd33de26830 SHA1 6f29dc8cee356d95494c51878f6b591a2188d257 SHA256 4a2e01deb95703b2baf0c7245706c7a47c91d33a1a494f334abfdf33561119f6
+EBUILD Digest-SHA-PurePerl-5.48.ebuild 538 RMD160 c21da4f305217534c2c2534aaf1cb395c764b68c SHA1 b22006580e95a1a345d3b422aa2d8c3049eb99f8 SHA256 d41b5b8bcfcfb25a2406d073e73581617813e15773037b64a8335cd066bbc798
+MISC ChangeLog 361 RMD160 59b5a81911e91e8a963365ef06c309c8eb535692 SHA1 cbc628c075b7624c52cc606b3a11b20647335c0e SHA256 2ea1bcb6bedd65146fc89ea4891b06a9de5df204d64efc616b0614c756f74c64
 MISC metadata.xml 376 RMD160 e0fa449012d14364ef32588ed5cab2fa28aa35ab SHA1 582cc831837678d8109d6ec2adc24717c8f67780 SHA256 86950018775b878f3c4af237dac058dd36367dd575065537f76e6a3d6a59d798
