@@ -3,6 +3,10 @@
 # $Header: $
 
   14 Sep 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  Digest-SHA-PurePerl-5.48.ebuild:
+  fix file collision
+
+  14 Sep 2010; A. Vinogradov <spamslepnoga@inbox.ru>
   +Digest-SHA-PurePerl-5.48.ebuild, +metadata.xml:
   initial commit
 
